--- a/login.html
+++ b/login.html
@@ -38,14 +38,20 @@
             box-sizing: border-box;
         }
 
+        input[type="text"], input[type="text"] {
+            width: calc(100% - 22px);
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 16px;
+            box-sizing: border-box;
+        }
+
         input[type="number"]::-webkit-outer-spin-button,
         input[type="number"]::-webkit-inner-spin-button {
             -webkit-appearance: none;
             margin: 0;
-        }
-
-        input[type="number"] {
-            -moz-appearance: textfield; /* Firefox */
         }
 
         button {
@@ -82,6 +88,7 @@
 </head>
 <body>
     <div class="container">
+        <input type="text" id="Name" placeholder="Enter your Name">
         <input type="number" id="mobileNumberInput" placeholder="Enter your Mobile number">
         <input type="password" id="OTPInput" placeholder="Enter OTP" required>
         <button onclick="verifyOTP()">Submit</button>
@@ -111,7 +118,6 @@
         }
 
         function resendOTP() {
-            // Add logic to resend OTP
             alert('OTP has been resent to your mobile number.');
         }
     </script>
