--- a/Category.html
+++ b/Category.html
@@ -69,7 +69,7 @@
 <body>
     <div class="container">
         <video class="background-video" autoplay loop muted>
-            <source src="Images/food.mp4" type="video/mp4">
+            <source src="Images/vid1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="category">
@@ -113,7 +113,7 @@
         
             if (category === 'Veg' && vegCheckbox.checked) {
                 categoryTitle.innerText = 'Veg';
-                categoryImg.src = 'Images/veg-logo-png.jpg';
+                categoryImg.src = 'Images/c1.jpg';
                 nonVegCheckbox.checked = false;
                 veganCheckbox.checked = false;
                 dietCheckbox.checked = false;
@@ -121,7 +121,7 @@
                 mocktailsCheckbox.checked = false;
             } else if (category === 'Non Veg' && nonVegCheckbox.checked) {
                 categoryTitle.innerText = 'Non Veg';
-                categoryImg.src = 'Images/Non-Veg-PNG-Isolated-HD.png';
+                categoryImg.src = 'Images/c2.png';
                 vegCheckbox.checked = false;
                 veganCheckbox.checked = false;
                 dietCheckbox.checked = false;
@@ -129,7 +129,7 @@
                 mocktailsCheckbox.checked = false;
             } else if (category === 'Vegan' && veganCheckbox.checked) {
                 categoryTitle.innerText = 'Vegan';
-                categoryImg.src = 'Images/veg-non-veg-symbol-isolated-vector-49739023.jpg';
+                categoryImg.src = 'Images/c3.jpg';
                 vegCheckbox.checked = false;
                 nonVegCheckbox.checked = false;
                 dietCheckbox.checked = false;
@@ -137,7 +137,7 @@
                 mocktailsCheckbox.checked = false;
             } else if (category === 'Diet' && dietCheckbox.checked) {
                 categoryTitle.innerText = 'Diet';
-                categoryImg.src = 'Images/veg-non-veg-symbol-isolated-vector-49739023.jpg';
+                categoryImg.src = 'Images/c4.jpg';
                 vegCheckbox.checked = false;
                 nonVegCheckbox.checked = false;
                 veganCheckbox.checked = false;
@@ -145,7 +145,7 @@
                 mocktailsCheckbox.checked = false;
             } else if (category === 'Desserts' && dessertsCheckbox.checked) {
                 categoryTitle.innerText = 'Desserts';
-                categoryImg.src = 'Images/veg-non-veg-symbol-isolated-vector-49739023.jpg';
+                categoryImg.src = 'Images/c5.jpg';
                 vegCheckbox.checked = false;
                 nonVegCheckbox.checked = false;
                 veganCheckbox.checked = false;
@@ -153,7 +153,7 @@
                 mocktailsCheckbox.checked = false;
             } else if (category === 'Mocktails' && mocktailsCheckbox.checked) {
                 categoryTitle.innerText = 'Mocktails';
-                categoryImg.src = 'Images/veg-non-veg-symbol-isolated-vector-49739023.jpg';
+                categoryImg.src = 'Images/c6.jpg';
                 vegCheckbox.checked = false;
                 nonVegCheckbox.checked = false;
                 veganCheckbox.checked = false;
