--- a/index.html
+++ b/index.html
@@ -84,10 +84,43 @@
             background-color: lightgreen;
             color: #ffffff;
         }
+
+        .logo {
+            width: 100px; 
+            height: auto;
+            display: block;
+            margin: 0 auto 20px;
+        }
+
+        .video-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+        }
+
+        .video-container video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
     </style>
 </head>
 <body>
+
+    <div class="video-container">
+        <video autoplay muted loop>
+            <source src="Images/vid3.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
     <div class="container">
+        <img src="Images/logo.jpg" alt="Restaurant Logo" class="logo">
         <input type="text" id="Name" placeholder="Enter your Name">
         <input type="number" id="mobileNumberInput" placeholder="Enter your Mobile number">
         <input type="password" id="OTPInput" placeholder="Enter OTP 1234" required>
