--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="container">
-        <img src="Images/logo.jpg" alt="Restaurant Logo" class="logo">
+        <img src="Images/Logo.jpg" alt="Restaurant Logo" class="logo">
         <input type="text" id="Name" placeholder="Enter your Name">
         <input type="number" id="mobileNumberInput" placeholder="Enter your Mobile number">
         <input type="password" id="OTPInput" placeholder="Enter OTP 1234" required>
