--- a/Category.html
+++ b/Category.html
@@ -174,11 +174,11 @@
             const mocktailsChecked = document.getElementById('mocktailsCheckbox').checked;
             
             if (vegChecked) {
-                window.location.href = 'vegitems.html';
+                window.location.href = 'Vegitems.html';
             } else if (nonVegChecked) {
                 window.location.href = 'nonvegitems.html';
             } else if (veganChecked) {
-                window.location.href = 'veganitems.html';
+                window.location.href = 'Veganitems.html';
             } else if (dietChecked) {
                 window.location.href = 'dietitems.html';
             } else if (dessertsChecked) {
