--- a/payment.html
+++ b/payment.html
@@ -113,7 +113,7 @@
     <script>
         document.getElementById("paymentForm").addEventListener("submit", function (event) {
             event.preventDefault(); // Prevent actual form submission
-            window.location.href = "otp.html"; // Navigate to OTP page
+            window.location.href = "Otp.html"; // Navigate to OTP page
         });
     </script>
 
