--- a/thankyou.html
+++ b/thankyou.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="Images/logo.jpg" alt="Restaurant Logo" class="logo">
+        <img src="Images/Logo.jpg" alt="Restaurant Logo" class="logo">
         <h2>Thank You for Your Order!</h2>
         <p>Your Order Number: <span id="orderNumber"></span></p>
         <button id="homeBtn">Back to Main Page</button>
