--- a/otp.html
+++ b/otp.html
@@ -96,7 +96,7 @@
     </div>
 
     <div class="container">
-        <img src="Images/logo.jpg" alt="Restaurant Logo" class="logo">
+        <img src="Images/Logo.jpg" alt="Restaurant Logo" class="logo">
         <input type="password" id="OTPInput" placeholder="Enter OTP 4321" required>
         <button onclick="verifyOTP()">Submit</button>
         <button class="back-button1" onclick="resendOTP()">Resend OTP</button>
