--- a/dietitemdetail.html
+++ b/dietitemdetail.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div class="logo-container">
-        <img src="Images/logo.jpg" alt="Restaurant Logo" class="logo">
+        <img src="Images/Logo.jpg" alt="Restaurant Logo" class="logo">
     </div>
     <div class="card" id="itemDetails">Loading...</div>
     <script>
