--- a/Category.html
+++ b/Category.html
@@ -178,13 +178,13 @@
             } else if (nonVegChecked) {
                 window.location.href = 'nonvegitems.html';
             } else if (veganChecked) {
-                window.location.href = 'veganitems.html';
+                window.location.href = 'vegan.html';
             } else if (dietChecked) {
-                window.location.href = 'dietitems.html';
+                window.location.href = 'diet.html';
             } else if (dessertsChecked) {
-                window.location.href = 'dessertsitems.html';
+                window.location.href = 'desserts.html';
             } else if (mocktailsChecked) {
-                window.location.href = 'mocktailsitems.html';
+                window.location.href = 'mocktails.html';
             } else {
                 alert('Please select a category.');
             }
