--- a/thankyou.html
+++ b/thankyou.html
@@ -63,9 +63,31 @@
             display: block;
             margin: 0 auto 20px;
         }
+        
+        .video-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+        }
+
+        .video-container video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
+    <div class="video-container">
+        <video autoplay muted loop>
+            <source src="Images/vid3.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
     <div class="container">
         <img src="Images/Logo.jpg" alt="Restaurant Logo" class="logo">
         <h2>Thank You for Your Order!</h2>
