--- a/thankyou.html
+++ b/thankyou.html
@@ -41,7 +41,7 @@
             font-size: 20px;
         }
 
-        button {
+        .button {
             background-color: #007bff;
             color: white;
             border: none;
@@ -51,10 +51,19 @@
             cursor: pointer;
             transition: background-color 0.3s;
             margin-top: 15px;
+            width: 100%;
         }
 
-        button:hover {
+        .button:hover {
             background-color: #0056b3;
+        }
+
+        .track-button {
+            background-color: #28a745;
+        }
+
+        .track-button:hover {
+            background-color: #218838;
         }
 
         .logo {
@@ -88,11 +97,13 @@
             Your browser does not support the video tag.
         </video>
     </div>
+
     <div class="container">
         <img src="Images/Logo.jpg" alt="Restaurant Logo" class="logo">
         <h2>Thank You for Your Order!</h2>
         <p>Your Order Number: <span id="orderNumber"></span></p>
-        <button id="homeBtn">Back to Main Page</button>
+        <button class="button" id="homeBtn">Back to Main Page</button>
+        <button class="button track-button" id="trackOrderBtn">Track Order</button>
     </div>
 
     <script>
@@ -102,6 +113,10 @@
 
             document.getElementById("homeBtn").addEventListener("click", function () {
                 window.location.href = "index.html"; // Change to your main page
+            });
+
+            document.getElementById("trackOrderBtn").addEventListener("click", function () {
+                window.location.href = "Track.html"; // Redirect to Order Tracking page
             });
         });
     </script>
