--- a/otp.html
+++ b/otp.html
@@ -125,7 +125,7 @@
         }
 
         function resendOTP() {
-            alert('OTP has been resent to your mobile number.');
+            alert('OTP has been resent to your mobile number 4321.');
         }
     </script>
 
