--- a/thankyou.html
+++ b/thankyou.html
@@ -116,7 +116,7 @@
             });
 
             document.getElementById("trackOrderBtn").addEventListener("click", function () {
-                window.location.href = "Track.html"; // Redirect to Order Tracking page
+                window.location.href = "track.html"; // Redirect to Order Tracking page
             });
         });
     </script>
