--- a/track.html
+++ b/track.html
@@ -126,9 +126,9 @@
         <h1>Order Tracking</h1>
 
         <div class="progress-container">
-            <div class="step" id="orderReceived">*</div>
-            <div class="step" id="cooking">*</div>
-            <div class="step" id="ready">*</div>
+            <div class="step" id="orderReceived">1 Sec</div>
+            <div class="step" id="cooking">2 Sec</div>
+            <div class="step" id="ready">3 Sec</div>
         </div>
 
         <p id="statusMessage">Waiting for Order Status...</p>
