--- a/itemdetails.html
+++ b/itemdetails.html
@@ -55,6 +55,26 @@
             "Fat": "18g"
         }
     },
+    "Veg Lasagna": {
+        "Price": "200",
+        "ingredients": [
+            "Lasagna sheets (6)",
+            "Ricotta cheese (½ cup)",
+            "Mozzarella (½ cup)",
+            "Tomato sauce (1 cup)",
+            "Spinach (1 cup)",
+            "Zucchini (1, sliced)",
+            "Olive oil (1 tbsp)",
+            "Oregano (½ tsp)",
+            "Salt"
+        ],
+        "nutrition": {
+            "Calories": "380",
+            "Carbs": "45g",
+            "Protein": "15g",
+            "Fat": "14g"
+        }
+    },
     "Mediterranean Couscous Salad": {
         "Price": "400",
         "ingredients": [
