--- a/mocktailitemdetail.html
+++ b/mocktailitemdetail.html
@@ -90,7 +90,7 @@
             "Sugar": "High"
         }
     },
-    "Blue Lagoon (Non-Alcoholic)": {
+    "Blue Lagoon": {
         "Price": "170",
         "ingredients": [
             "Blue curacao syrup",
