--- a/desserts.html
+++ b/desserts.html
@@ -280,7 +280,7 @@
 
     <script>
 function viewItem(name) {
-    window.location.href = `itemdetails.html?name=${encodeURIComponent(name)}`;
+    window.location.href = `dessertsitemdetail.html?name=${encodeURIComponent(name)}`;
 }
 
 function customize(name) {
